syntax = "proto3";
package api;
option go_package = "github.com/ysomad/gigabg/proto";

// Client -> Server
message ClientMessage {
  oneof msg {
    JoinLobby join = 1;
  }
}

message JoinLobby {
  string lobby_id = 1;
}

// Server -> Client
message ServerMessage {
  oneof msg {
    GameState state = 1;
    Error error = 2;
  }
}

message GameState {
  string player_id = 1;
  int32 player_count = 2;
  repeated Player players = 3;
}

message Player {
  string id = 1;
  int32 hp = 2;
}

message Error {
  string message = 1;
}
